# R-Package-np

./: .Rbuildignore  .gitattribute  .gitattributes  .gitignore  .tmp.sh  AGENTS.md  AS_CRAN_WARNING_LEDGER.md  BOOTSTRAP_INTERFACE_STATUS.md  BUILD.md  BUILD_MPICH.md  BUILD_STAGE_MPI_HARDENING_PLAN_2026-03-04.md  CHANGELOG  CRAN_DIFF.md  DESCRIPTION  FFT_EXECUTION_READINESS_V5_2026-03-02.md  MODERNIZATION_DOD.md  MPI_CALLABLE_INVENTORY.md  MPI_EFFICIENCY_SWEEP_2026-03-04.md  NAMESPACE  NEWS.md  NPCDENS_TODO.md  NPLOT_S3_REWRITE_PLAN.md  NP_MASTER_AUDIT_REMEDIATION_PLAN_2026-04-02.md  NP_RMPI_AUTODISPATCH_REFACTOR_PLAN.md  NP_RMPI_S3_PLOT_AUTODISPATCH_AUDIT_2026-02-20.md  OPTIMIZATION.md  OPTIMIZATIONS.md  README  README.md  REMEDIATION_PATCH_DESIGN_STABLE_HELPER_MPI_2026-03-04.md  REMEDIATION_PLAN_CVLS_NONHELPER_PARITY_2026-03-04.md  REMEDIATION_PLAN_SESSION_ATTACH_2026-03-03.md  REMEDIATION_PLAN_SPMD_CANONICAL_2026-03-03.md  SKILLS.md  SPMD_REMEDIATION_CLOSEOUT_WORKFLOW_2026-03-04.md  SPMD_REMEDIATION_CLOSURE_CERTIFICATE_2026-03-04.md  SPMD_REMEDIATION_CLOSURE_MANIFEST_2026-03-04.json  SPMD_REMEDIATION_FINAL_HANDOFF_2026-03-04.md  WORKTREES.md  cleanup  (+7 more)
R/: Rcoll.R  Rcomm.R  Rmpi.R  Rng.R  Rparutilities.R  a.bw.dispatch.R  b.star.R  bandwidth.R  cmstest.R  conbandwidth.R  condbandwidth.R  condensity.R  condistribution.R  conmode.R  console.R  dbandwidth.R  debug.out  deneqtest.R  density.R  deptest.R  distribution.R  gsl_bspline.R  kbandwidth.R  kernelsum.R  lsqregression.R  np.autodispatch.R  np.cdenshat.R  np.cdhat.helpers.R  np.cdisthat.R  np.cmstest.R  np.condensity.R  np.condensity.bw.R  np.condensity.proper.R  np.condensity.slice.helpers.R  np.condensity.slice.proper.R  np.condistribution.R  np.condistribution.bw.R  np.condistribution.proper.R  np.condistribution.slice.helpers.R  np.condistribution.slice.proper.R  (+80 more)
benchmarks/: README.md  compare_np_serial_microbench.R  compare_np_serial_microbench_synth.R  np_kernel_isolation_microbench.R  np_serial_microbench.R  np_serial_microbench_synth.R
data/: Engel95.rda  Italy.rda  cps71.rda  oecdpanel.rda  wage1.rda
demo/: .Rprofile  00Index  Engel95.R  RUN.md  Readme  cleanup  compareRout  compare_rout.py  constrained.R  makefile  makefile.attach  makefile.mpi  makefile.openmpi  makefile.profile  makefile.serial  makefile.serial.sharcnet  makefile.sharcnet  npcdens_npRmpi_attach.R  npcdens_npRmpi_profile.R  npcdens_npRmpi_session.R  npcdens_serial.R  npcdensls_npRmpi.R  npcdensls_npRmpi_attach.R  npcdensls_npRmpi_profile.R  npcdensls_npRmpi_session.R  npcdensls_serial.R  npcdensml_npRmpi.R  npcdensml_npRmpi_attach.R  npcdensml_npRmpi_profile.R  npcdensml_npRmpi_session.R  npcdensml_serial.R  npcdist_npRmpi_attach.R  npcdist_npRmpi_profile.R  npcdist_npRmpi_session.R  npcdist_serial.R  npcdistls_npRmpi.R  npcdistls_npRmpi_attach.R  npcdistls_npRmpi_profile.R  npcdistls_npRmpi_session.R  npcdistls_serial.R  (+138 more)
inst/: CITATION  COPYRIGHTS  KERNELS_MAXIMA.md  MPI_SETUP.md  MacR64slaves.sh  README.md  RUN_DEMO.md  Rprofile  Rslaves.sh  Rslaves32.cmd  Rslaves64.cmd  cleanup  compile_npRmpi_MS_Windows.txt  cslavePI.c  demo_family_npaux.R  demo_family_npcdens.R  demo_family_npcdist.R  demo_family_npindex.R  demo_family_npplreg.R  demo_family_npreg.R  demo_family_npscoef.R  demo_family_nptests.R  demo_family_npudens.R  demo_family_npudist.R  demo_utils.R  install_npRmpi_MS_Windows.txt  install_npRmpi_SHARCNET.txt  install_npRmpi_mac_os.txt  kernels.max  merge.sh  runall  slavedaemon.R  sleep.c  timing
issue_notes/: .Rhistory  2026-03-07_r_layer_contract_snapshot.md  NATIVE_REGISTRATION_POLICY_20260301.md  Readme  bounded_adaptive_selector_gap.md  bounded_kernel_todo.md  classify_exit134_npmaster_once.R  conditional_plot_parity_todo.md  export_spmd_closure_bundle.sh  forensic_audit_autodispatch_plot_2026-02-20.md  goal1_plot_closeout_matrix.R  goal1_plot_closeout_perf_runs.R  goal1_plot_closeout_perf_summary.R  init_parameter_catalogue_20260427.md  issue_10_npcdens_gradients_abort.md  issue_13_npudens_avar_categorical.md  issue_16_npregbw_rule_of_thumb.md  issue_18_npregiv_multidim_instruments.md  issue_26_formula_eval_explodepipe.md  issue_3_local_linear_high_order.md  issue_44_npindex_bvcov_recycling.md  issue_4_npcdensbw_cvls_cvml_segfault.md  issue_4_npcdensbw_segfault_cvml.md  issue_50_np_pairs_plot.md  issue_51_npregiv_exogenous_w.md  issue_57_discrete_group_G_ltlt_n_optimization.md  issue_5_npqreg_tau_validation.md  issue_6_npindexbw_bwtype.md  issue_7_uocquantile_factor_subset.md  issue_notes_missing.md  issue_runmode_check_completion_hang.md  native_bridge_stress.R  nomad_mpi_scaling_repair_plan_20260427.md  npcdens_ll_mpi_collective_mismatch_repair_plan_20260427.md  npcdens_ll_unstable_raw_basis_message_plan_20260427.md  npcdens_scale_floor_repair_plan_20260426.md  npplreg_nomad_redesign_plan_20260506.md  npqreg_canonical_extractor_repair_plan_20260428.md  nprmpi_lifecycle_validation_plan_20260427.md  package_spmd_closure_archive.sh  (+37 more)
man/: .gitattributes  b.star.Rd  data-Engel95.Rd  data-cps71.Rd  data-italy.Rd  data-oecd.Rd  data-wage1.Rd  dimBS.Rd  dontrun  gradients.Rd  hosts.Rd  internal.Rd  mpi.abort.Rd  mpi.apply.Rd  mpi.barrier.Rd  mpi.bcast.Rd  mpi.bcast.Robj.Rd  mpi.bcast.cmd.Rd  mpi.cart.coords.Rd  mpi.cart.create.Rd  mpi.cart.get.Rd  mpi.cart.rank.Rd  mpi.cart.shift.Rd  mpi.cartdim.get.Rd  mpi.comm.Rd  mpi.comm.disconnect.Rd  mpi.comm.free.Rd  mpi.comm.inter.Rd  mpi.comm.set.errhandler.Rd  mpi.comm.spawn.Rd  mpi.const.Rd  mpi.dims.create.Rd  mpi.exit.Rd  mpi.finalize.Rd  mpi.gather.Rd  mpi.gather.Robj.Rd  mpi.get.count.Rd  mpi.get.processor.name.Rd  mpi.get.sourcetag.Rd  mpi.get.version.Rd  (+77 more)
src/: Makevars  Makevars.in  Makevars.win  RegQuery.c  Rmpi.c  Rmpi.h  RuniqueCombs.c  RuniqueCombs.h  beta_bandwidth.c  beta_bandwidth.h  beta_conditional.c  beta_conditional.h  beta_kernel.c  beta_kernel.h  beta_kernelsum.c  beta_kernelsum.h  beta_objectives.c  beta_objectives.h  beta_regression.c  beta_regression.h  bspline.c  conversion.c  gsl_bspline.c  gsl_bspline.h  hash.c  hash.h  headers.h  internal.c  jksum.c  kernel.c  (+23 more)
(+773 files in other folders)
